Remove commented code section and change highPrice to price (close price)

--- a/index.html
+++ b/index.html
@@ -453,9 +453,14 @@
                 let sharesSold = 0;
 
                 // Update the highest peak (always check if price exceeds the highestPeak)
-                if (data.highPrice > highestPeak) {
-                    highestPeak = data.highPrice;
+                if (data.price > highestPeak) {  // 'price' here refers to the closePrice as defined earlier
+                    highestPeak = data.price;
                 }
+                
+                // Compare highest peak to high price of the day
+                // if (data.price > highestPeak) { 
+                //     highestPeak = data.highPrice;
+                // }
 
                 let buy_price = null;
                 let sellPrice = null;
@@ -488,9 +493,6 @@
                             if (buyPricesLog === '') {
                                 buyPricesLog = buy_price.toFixed(4);
                             }
-                            // else {
-                            //     buyPricesLog += `; ${buy_price.toFixed(4)}`;
-                            // }
 
                             // Align Buy points with active portfolio value
                             let activeInvestmentValue = cash - initialCash + totalProfit + activeInvestments.reduce((sum, inv) => sum + inv.shares * price, 0);
