Change hovermode to closest as default (show closest data on hover instead of multiple)

--- a/index.html
+++ b/index.html
@@ -842,6 +842,7 @@
                 yaxis: {
                     title: 'Value ($)',
                 },
+                hovermode: 'closest', // Enable 'closest' hover mode by default
                 legend: {
                     orientation: 'h', // Horizontal orientation
                     x: 0.5, // Center the legend horizontally
