Change totalInvestment slider to a max amonut of 10M

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
             <div class="input-group">
                 <label for="totalInvestment">Total Investment ($): <span id="totalInvestmentValue">100000</span></label>
-                <input type="range" id="totalInvestment" class="slider" min="50000" max="200000" value="100000" step="1000">
+                <input type="range" id="totalInvestment" class="slider" min="50000" max="10000000" value="100000" step="1000">
             </div>
             <div class="input-group">
                 <label for="split">Investment vs. Cash Split (%): <span id="splitValue">50%</span></label>
